Tweaks to test-java-files.sh